--- a/note_app_frontend/package.json
+++ b/note_app_frontend/package.json
@@ -10,15 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "axios": "^1.6.8",
+    "markdown-it": "^14.0.0",
+    "marked": "^12.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.0",
-    "react-split": "^2.0.14"
+    "react-split": "^2.0.14",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
